# cnetflow_gobackend

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.rhel7  README.md  build.sh  build_rhel7.sh  centos-base.repo  centos-scl.repo  charts.go  cnetflow_gobackend.go  compose.yml  config_api.go  docker_build_debian.sh  docker_build_rhel7.sh  enrichment.go  go.mod  go.sum  main.go  page.go  postgres_metrics.go  protocols.go  traffic.go  types.go
.github/workflows/: build-packages.yml
.junie/: guidelines.md
static/: body.gotmpl.go.html  body.js.gotmpl.html  charts.timeseries.gotmpl.js  config.html  d3test.html  dashboard.html  flows.html  highcharts.html  index.html  metrics.html  ports_protocols_timeseries.html  postgres_metrics.html  protocols.html  select.js  traffic.html  world.html
static/js/: cache.js  chart.js
static/templates/: body.js.gotmpl.html  charts.pie.gotmpl.js  charts.pie.v2.gotmpl.js  charts.sankey.gotmpl.js  charts.timeseries.gotmpl.js  charts.timeseries.v2.gotmpl.js
